--- a/SourceEngineTextureTool/Views/MainWindow.axaml
+++ b/SourceEngineTextureTool/Views/MainWindow.axaml
@@ -33,8 +33,7 @@
                 <Style Selector="MenuItem">
                     <Setter Property="Foreground" Value="White" />
                 </Style>
-                <Style Selector="MenuItem > Popup">
-                </Style>
+                <Style Selector="MenuItem > Popup" />
                 <Style Selector="MenuItem MenuItem">
                     <Setter Property="Background" Value="#353535" />
                 </Style>
@@ -66,16 +65,16 @@
                     <Grid.Styles>
                         <Style Selector="Grid > Border">
                             <Setter Property="BorderThickness" Value="1" />
-                            <Setter Property="BorderBrush" Value="#2b2b2b"></Setter>
+                            <Setter Property="BorderBrush" Value="#2b2b2b" />
                             <Setter Property="Padding" Value="10 5" />
                         </Style>
 
                         <Style Selector="Button">
-                            <Setter Property="FontSize" Value="20"></Setter>
+                            <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="#f6f6f6" />
                             <Setter Property="Padding" Value="10 5" />
                             <Setter Property="HorizontalAlignment" Value="Stretch" />
-                            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+                            <Setter Property="HorizontalContentAlignment" Value="Center" />
                         </Style>
                         <Style Selector="Button#Export">
                             <Setter Property="Background" Value="#ce2bff" />
@@ -84,14 +83,14 @@
                             <Setter Property="Background" Value="#6b008b" />
                         </Style>
                         <Style Selector="Label">
-                            <Setter Property="Foreground" Value="#f6f6f6"></Setter>
+                            <Setter Property="Foreground" Value="#f6f6f6" />
                         </Style>
                     </Grid.Styles>
 
                     <!-- Texture properties -->
                     <Border Grid.Row="0">
                         <StackPanel>
-                            <ComboBox></ComboBox>
+                            <ComboBox />
 
                             <Grid ColumnDefinitions="*,*" DataContext="{Binding TextureViewModel}">
                                 <StackPanel Grid.Column="0">
@@ -106,7 +105,7 @@
                                     <StackPanel Orientation="Horizontal">
                                         <Label Content="{Binding MipmapCount}" />
                                         <CheckBox IsChecked="{Binding GenerateMipmaps}"
-                                                  Content="Generate Mipmaps"/>
+                                                  Content="Generate Mipmaps" />
                                     </StackPanel>
                                 </StackPanel>
                             </Grid>
@@ -121,76 +120,8 @@
                         </Grid>
                     </Border>
 
-                    <Border Grid.Row="2">
-                        <TabControl>
-                            <!-- Texture settings Todo: Set the width of the combobox to the width of the (open) popup w/ the greatest width -->
-                            <TabItem Header="Settings">
-                                <Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto,Auto,Auto">
-
-                                    <!-- VTF Version Selector -->
-                                    <Label Grid.Column="0" Grid.Row="0" Content="VTF Version:" />
-                                    <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding SupportedVTFVersions}"
-                                              SelectedItem="{Binding SelectedVTFVersion}">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding }" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-
-                                    <!-- Image format -->
-                                    <Label Grid.Column="0" Grid.Row="1" Content="Image Format:" />
-                                    <ComboBox Grid.Column="1" Grid.Row="1"
-                                              ItemsSource="{Binding SupportedVTFImageFormats}"
-                                              SelectedItem="{Binding SelectedVTFImageFormat}"
-                                              MaxDropDownHeight="300">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding }" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-
-                                    <!-- Image scale algorithm -->
-                                    <Label Grid.Column="0" Grid.Row="2" Content="Scaling Algorithm: " />
-                                    <ComboBox Grid.Column="1" Grid.Row="2"
-                                              ItemsSource="{Binding  SupportedScaleAlgorithms}"
-                                              SelectedItem="{Binding SelectedScaleAlgorithm}">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding}" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-
-                                    <!-- Image scale mode -->
-                                    <Label Grid.Column="0" Grid.Row="3" Content="Scale Mode:" />
-                                    <ComboBox Grid.Column="1" Grid.Row="3"
-                                              ItemsSource="{Binding  SupportedScaleModes}"
-                                              SelectedItem="{Binding SelectedScaleMode}">
-                                        <ComboBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding}" />
-                                            </DataTemplate>
-                                        </ComboBox.ItemTemplate>
-                                    </ComboBox>
-                                </Grid>
-                            </TabItem>
-
-                            <TabItem Header="Flags">
-                                <!-- Optional VTF Flags Bug: SelectionMode reverts to Single.-->
-                                <ListBox ItemsSource="{Binding OptionalVTFFlags}"
-                                         SelectionMode="Multiple,Toggle"
-                                         Selection="{Binding SelectedFlags}">
-                                    <ListBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding}" />
-                                        </DataTemplate>
-                                    </ListBox.ItemTemplate>
-                                </ListBox>
-                            </TabItem>
-                        </TabControl>
-                    </Border>
+                    <v:ProjectSettings Grid.Row="2"
+                                       DataContext="{Binding ProjectSettingsViewModel}" />
                 </Grid>
             </SplitView.Pane>
 
@@ -213,9 +144,9 @@
 
                 <Border Grid.Column="1" Grid.Row="1">
                     <!-- <ScrollViewer> -->
-                        <ScrollViewer AllowAutoHide="False" HorizontalScrollBarVisibility="Auto">
-                            <v:TextureWorkspace DataContext="{Binding TextureViewModel}" />
-                        </ScrollViewer>
+                    <ScrollViewer AllowAutoHide="False" HorizontalScrollBarVisibility="Auto">
+                        <v:TextureWorkspace DataContext="{Binding TextureViewModel}" />
+                    </ScrollViewer>
                     <!-- </ScrollViewer> -->
                 </Border>
             </Grid>
