--- a/SourceEngineTextureTool/Views/MainWindow.axaml
+++ b/SourceEngineTextureTool/Views/MainWindow.axaml
@@ -133,19 +133,18 @@
                                 </Grid>
                             </Border>
                             <Border>
-                                <Grid ColumnDefinitions="*,Auto">
-                                    <Label Content="Inherit mipmap source from: "/>
+                                <StackPanel>
+                                    <Label Content="Generate mipmaps from: "/>
                                     <ComboBox Grid.Column="1"
                                               ItemsSource="{Binding SupportedPropagationStrategies}"
-                                              SelectedItem="{Binding MipmapSourcePropagationStrategy}"
-                                              MaxDropDownHeight="300">
+                                              SelectedItem="{Binding MipmapSourcePropagationStrategy}">
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
-                                                <TextBlock Text="{Binding }" />
+                                                <TextBlock Text="{Binding ., Converter={StaticResource DisplayNameConverter}}" />
                                             </DataTemplate>
                                         </ComboBox.ItemTemplate>
                                     </ComboBox>
-                                </Grid>
+                                </StackPanel>
                             </Border>
                         </StackPanel>
                     </Border>
